<resources>
    <string name="app_name">AIDT</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="login_window">LOGIN WINDOW</string>
    <string name="email_address">Email_Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_acoount_sign_up_now">Dont have an Acoount?? sign up now!!!</string>
    <string name="forgot_your_password_click_here">Forgot Your Password?? Click Here</string>
    <string name="title_activity_actual">Actual</string>
    <string name="sign_up_window">Sign Up Window</string>
    <string name="email">Email</string>
    <string name="create_password">create_password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="dob_dd_mm_yyyy">DOB- dd/mm/yyyy</string>
    <string name="already_registered_sign_in_now"><![CDATA[Already registered???Sign in now>>>]]></string>
    <string name="sumbit">Sumbit</string>
    <string name="username">Username</string>
    <string name="email_id">Email Id</string>
    <string name="recover_password">Recover Password</string>
    <string name="not_yet_signed_up_sign_up_now"><![CDATA[Not yet Signed up ?? Sign up now>>>]]></string>
    <string name="go_back_to_login_window"><![CDATA[Go back to login window>>>]]></string>
    <string name="textview">TextView</string>
    <string name="welcome_to_the_app">Welcome to the App</string>
    <string name="welcome">Welcome</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmi_calculator2">BMI Calculator</string>
    <string name="weight_in_kg">Weight in KG</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result-</string>
</resources>
