<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".bmi">

    <TextView
        android:id="@+id/bnyu"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bmi_calculator2"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:inputType="numberDecimal"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText9"
        android:layout_alignParentTop="true"
        android:layout_marginTop="174dp"
        android:ems="10"
        android:hint="@string/height_in_cm"
        android:inputType="numberDecimal"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="216dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="113dp"
        android:text="@string/result"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp" />
</RelativeLayout>